RHEL Java 8 support